# 3D-Shape-Regression-for-Real-time-Facial-Animation-cpp

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.MD
src/: Fern.cpp  Fern.h  blendshapes.h  cameraPlugin.cpp  cameraPlugin.h  cascade_regressor.cpp  cascade_regressor.h  cnpy.cpp  cnpy.h  constants.h  cv_compatible_helper.cpp  cv_compatible_helper.h  dataset.cpp  dataset.h  gaussian_mixture_model.cpp  gaussian_mixture_model.h  main.cpp  main2.cpp  math.h  network.h  network_test.cpp  string_function.h  view_blendshapes_anim_main.cpp  viewer.cpp  weak_regressor.cpp  weak_regressor.h
